[package]
name = "mpi2p"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# async-trait = "0.1.64" TODO: implement this for from_request
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
diqwest = "1.1.1"
env_logger = "0.10.0"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = { version = "0.11.12", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schedule_recv = "0.1.0"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.25.0"
